@@ -1,11 +1,11 @@
 // This code implementation is the intellectual property of
-// the RD44 GEANT4 collaboration.
+// the GEANT4 collaboration.
 //
 // By copying, distributing or modifying the Program (or any work
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4GamDistrXrayTRmodel.cc,v 1.2 2000-06-06 08:47:47 mora Exp $
+// $Id: G4GamDistrXrayTRmodel.cc,v 1.3 2000-06-15 17:38:39 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -15,9 +15,6 @@
 #include "Randomize.hh"
 
 #include "G4Gamma.hh"
-
-typedef G4std::complex<double> G4complex ;
-
 
 ////////////////////////////////////////////////////////////////////////////
 //
@@ -78,21 +75,21 @@ G4GamDistrXrayTRmodel::GetStackFactor( G4double energy,
   G4complex Ca(1.0+0.5*fPlateThick*Ma/fAlphaPlate,fPlateThick/Za/fAlphaPlate) ; 
   G4complex Cb(1.0+0.5*fGasThick*Mb/fAlphaGas,fGasThick/Zb/fAlphaGas) ; 
 
-  G4complex Ha = pow(Ca,-fAlphaPlate) ;  
-  G4complex Hb = pow(Cb,-fAlphaGas) ;
+  G4complex Ha = G4std::pow(Ca,-fAlphaPlate) ;  
+  G4complex Hb = G4std::pow(Cb,-fAlphaGas) ;
   G4complex H  = Ha*Hb ;
 
   G4complex F1 = ( 0.5*(1+Qa)*(1.0+H) - Ha - Qa*Hb )/(1.0-H) ;
 
   G4complex F2 = (1.0-Ha)*(Qa-Ha)*Hb/(1.0-H)/(Q-H) ;
 
-  F2          *= pow(Q,fPlateNumber) - pow(H,fPlateNumber) ;
+  F2          *= pow(Q,G4double(fPlateNumber)) - G4std::pow(H,fPlateNumber) ;
 
-  result      = ( 1 - pow(Q,fPlateNumber) )/( 1 - Q ) ;
+  result      = ( 1 - pow(Q,G4double(fPlateNumber)) )/( 1 - Q ) ;
 
-  result     *= 2.0*F1.real() ;
+  result     *= 2.0*G4std::real(F1) ;
 
-  result     += 2.0*F2.real() ;
+  result     += 2.0*G4std::real(F2) ;
 
   return      result ;
 }
